<resources>
    <string name="language_code">es</string>
    <string name="app_name">PomoApp</string>
    <string name="label_register">Registro</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="terms_and_conditions"><Data><![CDATA[Acepto los <a href="https://onedrive.live.com/embed?cid=7B4B52AA75A62037&resid=7B4B52AA75A62037%215185&authkey=AF_6HmACX_5gwYo&em=2">Términos de Servicio</a> y <a href="https://onedrive.live.com/embed?cid=7B4B52AA75A62037&resid=7B4B52AA75A62037%215186&authkey=AHC1gkhT-GI4bAc&em=2">Políticas de privacidad</a> ]]> </Data></string>
    <string name="btn_continue">Continuar</string>
    <string name="have_an_account">¿Tienes una cuenta?</string>
    <string name="txt_login">&#160;&#160;Iniciar sesión</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="welcome">¡Bienvenido de nuevo!</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="register">Registrarse</string>
    <string name="label_task">Tareas</string>
    <string name="task">Tarea</string>
    <string name="task_list">Lista de tareas</string>
    <string name="add_task_list">+ Añadir lista</string>
    <string name="add_task">+ Añadir tarea</string>
    <string name="delete">Eliminar</string>
    <string name="delete_task">Eliminar tarea</string>
    <string name="delete_task_list">Eliminar lista</string>
    <string name="pomodoro_init">Se ha iniciado la tarea en Pomodoro</string>
    <string name="successful_login">Inicio de sesión Exitoso</string>
    <string name="successful_registration">Registro Exitoso</string>
    <string name="incorrect_credentials">Usuario o contraseña incorrectos, por favor intente de nuevo</string>
    <string name="error_email">Se debe ingresar un correo electronico</string>
    <string name="error_password">Falta ingresar la contraseña</string>
    <string name="error_name">Se debe ingresar el nombre</string>
    <string name="error_telephone">Se debe ingresar el teléfono</string>
    <string name="error_pass_form">Se debe ingresar la contraseña</string>
    <string name="error_pass_invalid">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_pass_conf">Se debe confirmar la contraseña</string>
    <string name="error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="error_accep_term">Debe aceptar los términos y condiciones</string>
    <string name="error_auth_failed">Fallo de autentificación</string>
    <string name="label_reset_password">Restablecer contraseña</string>
    <string name="btn_reset_password">Restablecer</string>
    <string name="txt_password_reset_information">Se le enviará un correo electrónico para restablecer su contraseña, por favor introduzca el correo con el que se registró en nuestra aplicación.</string>
    <string name="reset_password_successful">Se le ha enviado un correo electrónico para restablecer su contraseña</string>
    <string name="reset_password_unsuccessful">No se pudo enviar el correo de restablecimiento de contraseña</string>
    <string name="reset_password_wait">Espera un momento...</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_new_password">Confirmar nueva contraseña</string>
    <string name="error_new_pass_form">Se debe ingresar la nueva contraseña</string>
    <string name="error_new_pass_conf">Se debe confirmar la nueva contraseña</string>
    <string name="error_update_email">Fallo. No se pudo actualizar el correo electrónico</string>
    <string name="error_update_pass">Fallo. No se pudo actualizar la contraseña</string>
    <string name="update_profile">Perfil del usuario actualizado correctamente</string>
    <string name="data_basic">Datos Básicos</string>
    <string name="change_pass">Modificar contraseña</string>
    <string name="save">Guardar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_task">Tareas</string>
    <string name="menu_report">Reporte</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_log_out">Cerrar sesión</string>
    <string name="menu_failure">Fallo. No se pudo obtener la información del usuario</string>
    <string name="hello_home_fragment">Este es el fragmento de inicio</string>
    <string name="hello_pomodoro_fragment">Este es el fragmento de pomodoro</string>
    <string name="hello_profile_fragment">Este es el fragmento de perfil</string>
    <string name="hello_report_fragment">Este es el fragmento de reporte</string>
    <string name="hello_task_fragment">Este es el fragmento de tareas</string>
</resources>