<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/res_margin_top_label"
        android:layout_marginStart="@dimen/txt_margin_sides"
        android:fontFamily="@font/quicksand_bold"
        android:padding="@dimen/txt_padding"
        android:text="@string/label_reset_password"
        android:textColor="@color/colorText"
        android:textSize="@dimen/txt_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin_sides"
        android:layout_marginTop="@dimen/res_margin_top_label"
        android:layout_marginEnd="@dimen/txt_margin_sides"
        android:ems="10"
        android:hint="@string/email"
        android:paddingHorizontal="@dimen/txt_padding"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorPlaceHolder"
        app:boxBackgroundMode="filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabel"
        app:layout_constraintVertical_bias="0.0"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:inputType="textWebEmailAddress|textEmailAddress|textEmailSubject" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtInformative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_sides"
        android:layout_marginTop="@dimen/res_margin_top_txt"
        android:layout_marginEnd="@dimen/btn_margin_sides"
        android:fontFamily="@font/quicksand_medium"
        android:layoutDirection="ltr"
        android:text="@string/txt_password_reset_information"
        android:textColor="@color/colorTextLink"
        android:textSize="@dimen/txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_margin_height"
        android:layout_marginStart="@dimen/btn_margin_sides"
        android:layout_marginTop="@dimen/btn_margin_top_main"
        android:layout_marginEnd="@dimen/btn_margin_sides"
        android:background="@drawable/login_button"
        android:text="@string/btn_reset_password"
        android:fontFamily="@font/quicksand_medium"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInformative"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>